crates/org-parser/snapshots/org_rust_parser__object__link__tests__basic_regular_link.snap
---
source: crates/org-parser/src/object/link.rs
description: "[[hps://.org]]"
---
0..15 [1]
  0..15 Paragraph([2])
    0..14 RegularLink { path: Match { start: 2, end: 12, obj: Unspecified("hps://.org") }, description: None, caption: None }
