crates/org-parser/snapshots/org_rust_parser__object__link__tests__regular_link_description.snap
---
source: crates/org-parser/src/object/link.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
" [[https://meo][cool site]]"
0..28 [1]
  1..28 Paragraph([3])
    1..27 RegularLink { path: Match { start: 3, end: 14, obj: PlainLink(PlainLink { protocol: "https", path: "//meo" }) }, description: Some([2]), caption: None }
      16..25 "cool site"
