crates/org-parser/snapshots/org_rust_parser__object__link__tests__regular_link_malformed.snap
---
source: crates/org-parser/src/object/link.rs
description: |
  
  word
  [#A]
---
0..11 [1, 2]
  0..1 BlankLine
  1..11 Paragraph([4, 3, 5])
    1..5 "word"
    5..6 SoftBreak
    6..10 "[#A]"
